--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                     <li><a href="#paket-layanan" class="navbar-link text-white hover:text-primary font-medium transition">Paket & Layanan</a></li>
                     <li><a href="#testimonials" class="navbar-link text-white hover:text-primary font-medium transition">Testimoni</a></li>
                     <li><a href="#maps" class="navbar-link text-white hover:text-primary font-medium transition">Kontak</a></li>
+                    <li><a href="https://blog.dedstravel.com/" class="navbar-link text-white hover:text-primary font-medium transition" target="_blank">Blog</a></li>
                 </ul>
+
                 <a href="https://api.whatsapp.com/send/?phone=6287828771188&text=Halo%20Ded%27s%20Travel&type=phone_number&app_absent=0" class="bg-primary hover:bg-green-700 text-white px-6 py-2 rounded-full font-medium transition shadow-md">
                     <i class="fas fa-phone-alt mr-2"></i>Order Sekarang
                 </a>
@@ -63,7 +65,9 @@
                     <li><a href="#paket-layanan" class="block py-2 text-gray-700 hover:text-primary">Paket & Layanan</a></li>
                     <li><a href="#testimonials" class="block py-2 text-gray-700 hover:text-primary">Testimoni</a></li>
                     <li><a href="#maps" class="block py-2 text-gray-700 hover:text-primary">Kontak</a></li>
+                    <li><a href="https://blog.dedstravel.com/" class="block py-2 text-gray-700 hover:text-primary" target="_blank">Blog</a></li>
                 </ul>
+
                 <a href="https://api.whatsapp.com/send/?phone=6287828771188&text=Halo%20Ded%27s%20Travel&type=phone_number&app_absent=0" class="mt-4 inline-block bg-primary hover:bg-green-700 text-white px-6 py-2 rounded-full font-medium transition shadow-md">
                     <i class="fas fa-phone-alt mr-2"></i>Order Sekarang
                 </a>
